--- a/src/Onitama.scss
+++ b/src/Onitama.scss
@@ -156,17 +156,25 @@ body, .onitama-wrapper {
 }
 
 .onitama-cell-selected::before {
-	left: 5%;
-	top: 5%;
+	left: 4%;
+	top: 4%;
 	border-bottom: none;
 	border-right: none;
 }
 
 .onitama-cell-selected::after {
-	right: 5%;
-	bottom: 5%;
+	right: 4%;
+	bottom: 4%;
 	border-top: none;
 	border-left: none;
+}
+
+.onitama-possible-move::after {
+	content: '';
+	display: block;
+	width: 100%;
+	height: 100%;
+	background-color: var(--ONITAMA-CARD-COLOR-RED);
 }
 
 .onitama-player {
@@ -239,7 +247,6 @@ body, .onitama-wrapper {
 }
 
 .onitama-player-color-blue {
-	// border-bottom: 2vw solid var(--ONITAMA-PLAYER-COLOR-BLUE);
 	border-image-source: url(underscore-blue.svg);
 	border-image-slice: 0 0 53 0;
 	border-image-width: 0px 0px auto 0px;
@@ -257,7 +264,6 @@ body, .onitama-wrapper {
 }
 
 .onitama-player-color-red {
-	// border-bottom: 2vw solid var(--ONITAMA-PLAYER-COLOR-RED);
 	border-image-source: url(underscore-red.svg);
 	border-image-slice: 0 0 53 0;
 	border-image-width: 0px 0px auto 0px;
