--- a/src/Onitama.scss
+++ b/src/Onitama.scss
@@ -4,6 +4,7 @@
 	--ONITAMA-BG-YES: #6aaa64;
 	--ONITAMA-BG-MAYBE: #c9b458;
 	--ONITAMA-BG-NO: #6a6a6a;
+	--ONITAMA-TEXT-COLOR: #292929;
 	--ONITAMA-TEXT-YES: #ffffff;
 	--ONITAMA-TEXT-MAYBE: #ffffff;
 	--ONITAMA-TEXT-NO: #ffffff;
@@ -38,9 +39,19 @@
 		url(MaterialIcons-Regular.ttf) format('truetype');
 }
 
+@font-face {
+	font-family: 'Water Dragon';
+	font-style: normal;
+	font-weight: 400;
+	src: local('Water Dragon'),
+		local('Water Dragon'),
+		url(water-dragon.ttf) format('truetype');
+}
+
 html, body, #root {
     margin: 0;
     height: 100%;
+	font-size: 4vmin;
 }
 
 .dark-mode {
@@ -57,10 +68,6 @@ html, body, #root {
 	--ONITAMA-BG-KEY: #818181;
 	--ONITAMA-TEXT-KEY: #ffffff;
 	--ONITAMA-WEIGHT-KEY: 400;
-}
-
-html {
-	font-size: 4vmin;
 }
 
 body, .onitama-wrapper {
@@ -168,6 +175,7 @@ body, .onitama-wrapper {
 .onitama-card {
 	width: 20vw;
 	height: 24vw;
+	font-size: 1em;
 	border: 1px solid #292929;
 	align-self: center;
 	display: grid;
@@ -177,9 +185,9 @@ body, .onitama-wrapper {
 }
 
 .onitama-card-selected {
-	-webkit-box-shadow: 0px 0px 4px 4px var(--ONITAMA-CARD-COLOR-RED);
-	-moz-box-shadow: 0px 0px 4px 4px var(--ONITAMA-CARD-COLOR-RED);
-	box-shadow: 0px 0px 4px 4px var(--ONITAMA-CARD-COLOR-RED);
+	-webkit-box-shadow: 0px 0px 0.75vh 0.75vh var(--ONITAMA-CARD-COLOR-RED);
+	-moz-box-shadow: 0px 0px 0.75vh 0.75vh var(--ONITAMA-CARD-COLOR-RED);
+	box-shadow: 0px 0px 0.75vh 0.75vh var(--ONITAMA-CARD-COLOR-RED);
 }
 
 .onitama-rotate-card {
@@ -208,17 +216,77 @@ body, .onitama-wrapper {
 .onitama-spare {
 	width: 15vw;
 	height: 18vw;
+	font-size: 0.75em;
 }
 
 .onitama-spare-card {
-	width: 15vw;
-	height: 18vw;
+	width: 100%;
+	height: 100%;
 	border: 1px solid #292929;
-	font-size: x-small;
+	font-size: inherit;
 	align-self: center;
 	display: grid;
 	grid-template-rows: 1fr 5fr;
-	padding: 0 4% 6%;}
+	padding: 0 4% 6%;
+}
+
+.onitama-spare-card-animated-hidden {
+	visibility: hidden;
+}
+
+.onitama-spare-card-animated {
+	visibility: visible;
+	position: absolute;
+	margin-top: 50%;
+	transform: rotate(-15deg);
+	perspective: 1000px;
+}
+
+.onitama-spare-card-animated,
+.onitama-spare-card-flip-front,
+.onitama-spare-card-flip-back {
+	width: 40vw;
+	height: 48vw;
+}
+
+.onitama-spare-card-flip {
+	opacity: 1;
+	transition: opacity 0.6s;
+	transform-style: preserve-3d;
+	position: relative;
+}
+
+.onitama-spare-animate {
+	transform: rotateY(180deg);
+	transition: transform 1s;
+	transition-delay: 200ms;
+}
+
+.onitama-spare-card-flip-hide {
+	opacity: 0;
+	transition: opacity 500ms;
+}
+
+.onitama-spare-card-flip-front,
+.onitama-spare-card-flip-back {
+	backface-visibility: hidden;
+	position: absolute;
+	top: 0;
+	left: 0;
+}
+
+.onitama-spare-card-flip-front {
+	font-size: 1.25em;
+	transform: rotateY(180deg);
+}
+
+.onitama-spare-card-flip-back {
+	background-image: url(onitama-card-back.png);
+	background-repeat: no-repeat;
+	background-size: contain;
+	transform: rotateY(0deg);
+	border: 1px solid black;
+}
 
 .onitama-spare-filler {
 	width: 15vw;
@@ -229,8 +297,8 @@ body, .onitama-wrapper {
 .onitama-player-color-blue {
 	border-image-source: url(underscore-blue.svg);
 	border-image-slice: 0 0 53 0;
-	border-image-width: 0px 0px auto 0px;
-	border-image-outset: 0px 0px 4.5vh 0px;
+	border-image-width: 0px 0px 4vh 0px;
+	border-image-outset: 0px 0px 3vh 0px;
 	border-image-repeat: stretch stretch;
 	border-style: solid;
 }
@@ -246,8 +314,8 @@ body, .onitama-wrapper {
 .onitama-player-color-red {
 	border-image-source: url(underscore-red.svg);
 	border-image-slice: 0 0 53 0;
-	border-image-width: 0px 0px auto 0px;
-	border-image-outset: 0px 0px 4.5vh 0px;
+	border-image-width: 0px 0px 4vh 0px;
+	border-image-outset: 0px 0px 3vh 0px;
 	border-image-repeat: stretch stretch;
 	border-style: solid;
 }
@@ -355,6 +423,36 @@ body, .onitama-wrapper {
 .onitama-student-blue {
 	background-image: url(student-blue.png);
 	background-size: contain;
+}
+
+.onitama-win-splash {
+	width: 80vw;
+	font-family: 'Water Dragon';
+	font-size: 6em;
+	text-align: center;
+	opacity: 0;
+	position: absolute;
+	margin-top: 50%;
+	transform: rotate(-15deg);
+	perspective: 1000px;
+	text-shadow: 0.25em 0.25em 0.125em var(--ONITAMA-TEXT-COLOR),
+		-0.03125em -0.03125em 0 var(--ONITAMA-TEXT-COLOR),
+		-0.03125em 0.03125em 0 var(--ONITAMA-TEXT-COLOR),
+		0.03125em -0.03125em 0 var(--ONITAMA-TEXT-COLOR),
+		0.03125em 0.03125em 0 var(--ONITAMA-TEXT-COLOR);
+}
+
+.show-onitama-win-splash {
+	opacity: 1;
+	transition: opacity 1s;
+}
+
+.onitama-win-blue {
+	color: var(--ONITAMA-PLAYER-COLOR-BLUE);
+}
+
+.onitama-win-red {
+	color: var(--ONITAMA-PLAYER-COLOR-RED);
 }
 
 .onitama-correct {
@@ -805,5 +903,21 @@ input[type="checkbox"].square:checked:before {
 	}
 	50% {
 		opacity: 0
+	}
+}
+
+@keyframes Flip {
+	0% {
+		visibility: hidden;
+	}
+	1% {
+		visibility: visible;
+		transform: rotateY(180deg);
+	}
+	25% {
+	 	transform: rotateY(180deg);
+	}
+	50% {
+		transform: rotateY(180deg);
 	}
 }
